# moseq2-pca

./: .gitignore  .pdm-python  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py
docs/: conf.py  index.rst  modules.rst  moseq2_pca.helpers.rst  moseq2_pca.pca.rst  moseq2_pca.rst
moseq2_pca/: README.md  __init__.py  cli.py  gui.py  util.py  viz.py
moseq2_pca/command_helpers/: data.py
moseq2_pca/helpers/: data.py  wrappers.py
moseq2_pca/pca/: util.py
moseq2_pca/tests/integration_tests/: test_cli.py  test_gui.py
moseq2_pca/tests/unit_tests/: test_pca_util.py  test_util.py  test_viz.py
scripts/: download_test_dataset.sh  moseq2-pca-completion.bash
tests/: test_cli.py  test_pca_util.py  test_util.py  test_viz.py
tests/integration_tests/: test_cli.py  test_gui.py
tests/test_files/: pca_test.yaml  test_conf.yaml  test_index.yaml  test_scores.h5
tests/unit_tests/: test_pca_util.py  test_util.py  test_viz.py
