[tool.pdm]

[project]
name = "moseq2-pca"
version = "1.2.0"
description = "To boldly go where no mouse has gone before"
readme = "README.md"
authors = [
    {name = "Jeff Markowitz"},
]
requires-python = ">=3.9"
dependencies = [
    "bokeh==2.4.2",
    "chest==0.2.3",
    "click==7.0",
    "dask-jobqueue==0.7.3",
    "dask==2.30.0",
    "distributed==2.30.1",
    "h5py==2.10.0",
    "joblib==0.15.1",
    "matplotlib==3.1.2",
    "numpy==1.18.3",
    "pathspec==0.5.3",
    "psutil==5.6.7",
    "ruamel.yaml==0.16.5",
    "scikit-image==0.16.2",
    "scikit-learn==0.20.3",
    "scipy==1.3.2",
    "seaborn==0.11.0",
    "tqdm>=4.48.0",
]

[project.scripts]
moseq2-pca = "moseq2_pca.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
